--- a/clase3 -  4 HTML/ejemplo 2.html
+++ b/clase3 -  4 HTML/ejemplo 2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tablas</title>
 </head>
+
 <body>
     <h1>Trabajamos con tablas</h1>
 
@@ -58,6 +59,8 @@
 
     <table border="1">
         <tr>
+            <!-- rowspan combinar verticalmente las columnas -->
+            
             <!-- colspan combinar horizontalmente las columnas -->
             <th colspan="3">titulo</th>
         </tr>
